Setback.Web/Client/public/index.css
body {
    margin: 0px;
}

main {
    background-color: lightblue;
    font-family: sans-serif;
    width: 100vw;
    height: 100vh;
    position: relative;
}

#score {
    position: absolute;
    left: 2%;
    top: 2%;
    text-align: end;
    font-size: small;
}

    #score th {
        padding-left: 5px;
        padding-right: 5px;
    }

    #score td {
        padding-left: 5px;
        padding-right: 5px;
    }

#title {
    position: absolute;
    left: 2%;
    top: 96%;
    text-align: end;
    color: lightslategray;
    font-size: small;
}

.chooser {
    display: none; /* hidden when created */
    font-size: min(2vw, 2vh);
    text-align: center;
    width: fit-content;
    height: fit-content;
    /* https://www.w3schools.com/howto/howto_css_center-vertical.asp */
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.bid {
    width: min(8vw, 12vh);
    font-size: min(2vw, 2vh);
    margin-left: 1vw;
    margin-right: 1vw;
    padding: min(1vw, 1vh);
    background-color: whitesmoke;
    text-align: center;
    border-radius: min(1vw, 1vh);
}

.bid-static {
    position: absolute;
    transform: translate(-50%, -50%);
    border: 0;
    color: black;
}

.♦ {
    color: red;
}

.♥ {
    color: red;
}

.♣ {
    color: black;
}

.♠ {
    color: black;
}

.card {
    position: absolute;
    width: 12vh;
    border: 1px solid gray;
    border-radius: 10px;
    transform: translate(-50%, -50%);
}

.active {
    cursor: pointer;
}

.banner {
    font-size: x-large;
    width: fit-content;
    height: fit-content;
    text-align: center;
    cursor: pointer;
    background-color: lightcoral;
    padding: 100px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

